2005-02-20  Dalibor Topic  <robilad@kaffe.org>

	* config/s390/sysdepCallMethod.h: Added missing semi-colon
	after DBG macro to fix failure on debian's s390 buildd.

2005-02-20  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Require -no-cpp-precomp if available
	to prevent Apple's gcc on old Darwin version to trip 
	over itself.

	Reported by:  Michael Franz <mvfranz@gmail.com>
	
2005-02-20  Dalibor Topic  <robilad@kaffe.org>

	* developers/resync-classpath.sh: Added new
	script to simplyfy resyncing with GNU Classpath.

	* FAQ/FAQ.gnu-classpath: Small faq on GU Classpath
	merge.

	* Makefile.am (EXTRA_DIST) Added 
	developers/resync-classpath.sh and FAQ/FAQ.gnu-classpath.

2005-02-20  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.
	
	2005-02-20  Michael Koch  <konqueror@gmx.de>

	* gnu/java/locale/LocaleInformation_af.java,
	gnu/java/locale/LocaleInformation_am.java,
	gnu/java/locale/LocaleInformation_ca.java,
	gnu/java/locale/LocaleInformation_cs.java,
	gnu/java/locale/LocaleInformation_cy.java,
	gnu/java/locale/LocaleInformation_da.java,
	gnu/java/locale/LocaleInformation_de.java,
	gnu/java/locale/LocaleInformation_el.java,
	gnu/java/locale/LocaleInformation_en.java,
	gnu/java/locale/LocaleInformation_eo.java,
	gnu/java/locale/LocaleInformation_es.java,
	gnu/java/locale/LocaleInformation_et.java,
	gnu/java/locale/LocaleInformation_eu.java,
	gnu/java/locale/LocaleInformation_fa.java,
	gnu/java/locale/LocaleInformation_fi.java,
	gnu/java/locale/LocaleInformation_fr.java,
	gnu/java/locale/LocaleInformation_ga.java,
	gnu/java/locale/LocaleInformation_hr.java,
	gnu/java/locale/LocaleInformation_hu.java,
	gnu/java/locale/LocaleInformation_hy.java,
	gnu/java/locale/LocaleInformation_id.java,
	gnu/java/locale/LocaleInformation_is.java,
	gnu/java/locale/LocaleInformation_it.java,
	gnu/java/locale/LocaleInformation_ja.java,
	gnu/java/locale/LocaleInformation_ka.java,
	gnu/java/locale/LocaleInformation_ko.java,